--- a/story.html
+++ b/story.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="reset.css"></link>
+    <link rel="stylesheet" href="styles.css"></link>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranking the Spurs starting five</title>
@@ -13,7 +18,7 @@
 <p class="byline">By <a href="https://x.com/jeph_duarte">Jeph Duarte</a><span> | Aug 5, 2018, 6:00am CDT</span></p>
 
 <figure>
-    <img src="./spurs.jpg" alt="Spurs in a game">
+    <img src="./spurs.jpg" width="620px" alt="Spurs in a game">
     <figcaption>Soobum Im / USA TODAY Sports</figcaption>
 </figure>
 <section>
@@ -44,11 +49,11 @@
 <p>And then there are the Spurs. How’s that for under the radar? Two All-Stars in LaMarcus Aldridge and DeMar DeRozan. And NBA Champion in Pau Gasol. A Second Team All-NBA Defensive point guard Dejounte Murray. And an NBA All-Rookie First Team Rudy Gay. All right, so Gay’s and Gasol’s accolades may have some dust. But Gay has a fire in his belly and his reconnecting with DeRozan is going transform them causing a resurgence to their early 20s game.</p>
 <p>What do you think? Do you agree with the rankings? I know there is room to nitpick. There’s also an argument to be made that LeBron plus any four players would rank high in the East but LeBron plus a 35-win Lakers crew and the expendable Warriors starter is not going to pull it off this season, but that may be something for the comments...</p>
 </section>
+</article>
 
-<section>
+<section id="comment-notes">
 <p>Welcome to The Thread. Join in the conversation, start your own discussion, and share your thoughts. This is the Spurs community, your Spurs community. Thanks for being here.</p>
 <p>Our community guidelines apply which should remind everyone to be cool, avoid personal attacks, not to troll and to watch the language.</p>
 </section>
-</article>
 </body>
 </html>
